# platform-next

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
frontend/: App.tsx  README.md  i18n.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  store.ts  styles.css  types.ts  vite.config.ts
frontend/components/: AgentPanel.tsx  AnalyticsPanel.tsx  AppSelect.tsx  ComparisonView.tsx  CopyButton.tsx  ErrorBoundary.tsx  ExperimentDesignModal.tsx  ExportModal.tsx  GuideAssistant.tsx  HelpModal.tsx  HostPanel.tsx  LanguageSwitcher.tsx  Layout.tsx  LogViewer.tsx  NavBar.tsx  NetworkEditorModal.tsx  Pre.tsx  ReportModal.tsx  RequireAuth.tsx  Sidebar.tsx  SimTree.tsx  SimulationWizard.tsx  TemplateSaveModal.tsx  TimeSettingsModal.tsx  TitleCard.tsx  Toast.tsx
frontend/locales/: en.json  zh.json
frontend/pages/: AdminPage.tsx  DashboardPage.tsx  DocsPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  SavedSimulationsPage.tsx  SettingsPage.tsx  SimulationPage.tsx  SimulationWizardPage.tsx
frontend/services/: admin.ts  backendClient.ts  base.ts  client.ts  providers.ts  scenes.ts  searchProviders.ts  simulationTree.ts  simulations.ts
frontend/store/: auth.ts  theme.ts
scripts/: default_map.json  env.gemini.sh  run_basic_scenes.py
src/socialsim4/: __init__.py  cli.py
src/socialsim4/backend/: __init__.py  (+2 more)
tests/backend/: test_auth_verification.py  test_error_events_and_logging.py  test_llm_concurrency_and_retry.py  test_node_subscriptions_lifecycle.py  test_simtree_clone_stability.py  test_smoke.py
(+68 files in other folders)
